--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Assets/application/css/main.css
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Assets/application/css/main.css
@@ -317,3 +317,26 @@ strong.select2-results__group {
 .select2-container {
     width: 100% !important;
 }
+
+
+/* --------------------- Clases para ancho de columnas grid-mvc-----------------------------*/
+
+.min-width-120 {
+    min-width: 120px;
+}
+
+.min-width-140 {
+    min-width: 140px;
+}
+
+.min-width-160 {
+    min-width: 160px;
+}
+
+.min-width-180 {
+    min-width: 180px;
+}
+
+.min-width-200 {
+    min-width: 200px;
+}
